# tool-llm-info-reader

./: .gitignore  README.md  llm_usage_reader.py  pyproject.toml  suggestions-20260618.md
.github/workflows/: tests.yml
samples/: anthropic_costs_response.json  anthropic_usage_response.json  openai_costs_response.json  openai_usage_response.json
tests/: test_llm_usage_reader.py  test_oneshot.py
